--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -35,6 +35,7 @@
   &__list {
       list-style: none;
       margin-top: 15px;
+      padding-left: 0;
   }
 
   &__item {
@@ -85,6 +86,7 @@
       @include respond(tab-port) {
           width: 100%;
           float: none;
+          font-size: .85rem;
       }
   }
 }
